[package]
authors = ["Lennart Kudling"]
build = "build.rs"
description = "Rust Calls Java - via JNI"
documentation = "https://docs.rs/crate/rucaja"
keywords = ["java", "jni"]
license = "MIT/Apache-2.0"
links = "jvm"
name = "rucaja"
readme = "README.md"
repository = "https://github.com/kud1ing/rucaja"
version = "0.4.5"

[dependencies]
jni-sys="0.3.0"
